--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 spring.jpa.properties.hibernate.dialect-org.hibernate.dialect.PostgreSQLDialect
+management.endpoints.web.exposure.include=hystrix.stream
+hystrix.dashboard.proxyStreamAllowList=*
